--- a/catus/templates/accounts/profile.html
+++ b/catus/templates/accounts/profile.html
@@ -751,6 +751,7 @@
 
                         <div id="div_id_banner_img" class="form-group">
                             <label for="id_banner_img" class="">Banner</label>
+                            <small class="form-text text-muted mb-2">Recomendado: 1500px de ancho x 300px de alto</small>
 
                             <div id="img-container-banner" class="img-container-banner">
                                 <img src="/{{form.banner_img.value}}">
