--- a/catus/templates/usuario/animales.html
+++ b/catus/templates/usuario/animales.html
@@ -55,7 +55,7 @@
     width: 100%;
     height: 300px;
     overflow: hidden;
-    margin-bottom: -50px;
+
   }
 
   .profile-banner-img {
@@ -64,16 +64,6 @@
     object-fit: cover;
     transition: transform 0.5s ease;
   }
-
-  .profile-banner-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100px;
-    background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1));
-  }
-
   .profile-header {
     position: relative;
     z-index: 10;
@@ -193,13 +183,21 @@
     }
 
     .profile-banner-container {
-      height: 200px;
+      height: 250px;
+      margin-bottom: -50px;
+    }
+
+    .profile-banner-overlay {
+      height: 80px;
+    }
+
+    .profile-logo-wrapper {
+      margin-top: -60px;
     }
 
     .profile-logo-container {
-      width: 80px;
-      height: 80px;
-      margin-top: -40px;
+      width: 120px;
+      height: 120px;
     }
 
     .profile-title {
